# sudoku

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: base_sudoku.hpp  board.hpp  classic_board.hpp  classic_enumerator.hpp  classic_rule.hpp  classic_solver.hpp  dlx.hpp  enumerator.hpp  rule.hpp  sample_sudoku.hpp  solver.hpp  sudoku.hpp  sudokucommon.hpp
model/: model.eapx
src/: base_sudoku.cpp  classic_board.cpp  classic_enumerator.cpp  classic_rule.cpp  classic_solver.cpp  main.cpp  sudoku.cpp
test/: CMakeLists.txt  test1.cpp  test_board.cpp  test_dlx_prot.cpp  test_rules.cpp  test_solver.cpp
