CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(sudoku VERSION 0.1.0)

SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES(include)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(LIB_SRC_LIST src/sudoku.cpp)
ADD_LIBRARY(sudoku_solver STATIC ${LIB_SRC_LIST})

ADD_EXECUTABLE(sudoku src/main.cpp)
TARGET_LINK_LIBRARIES(sudoku sudoku_solver)

INCLUDE(CTest)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)

SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
INCLUDE(CPack)